feat: refatoracao do calculo de SLA, filtros via backend e atualizacao do swagger
